--- a/envelope-front/index.html
+++ b/envelope-front/index.html
@@ -10,4 +10,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </html>
